<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/KeyIdLabel" />
    <EditText
        android:id="@+id/KeyId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vCodeLabel" />
    <EditText
        android:id="@+id/VCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_get_characters" 
        android:onClick="GetAllCharacters"/>
    <TextView
        android:id="@+id/CharNamesLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>